data/all_generated_tests/raw_wast_tests/return_EdgeCaseFailuresinbr_table_3022.wast
;; 1. **Test with Empty br_table**:    - Create a function that includes a `br_table` instruction with an empty vector of targets and an index of `0`.    - **Constraint**: Check how each implementation handles the case where there are no valid targets.    - **Edge Case**: Ensures that the implementation correctly identifies and handles an empty `br_table`.

(assert_invalid
  (module
    (func $empty-br_table
      (block
        (br_table 0 (return))
      )
    )
  )
  "type mismatch"
)